src/test/ui/traits/trait-resolution-in-overloaded-op.stderr
error[E0369]: cannot multiply `f64` to `&T`
  --> $DIR/trait-resolution-in-overloaded-op.rs:8:7
   |
LL |     a * b
   |     - ^ - f64
   |     |
   |     &T
   |
   = note: an implementation of `std::ops::Mul` might be missing for `&T`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
